tests/error/tensor_errors/too_many_args.err
Error: Too many arguments (at $FILE:12:28)
   | 
10 | @guppy(module)
11 | def main() -> int:
12 |     return (foo, foo)(1, 2, 3)
   |                             ^ Unexpected argument (expected 2, got 3)

Note: Function signature is `(int, int) -> (int, int)`

Guppy compilation failed due to 1 previous error
